deleted sliders and styling buttons

--- a/pages/interests_outdoors.html
+++ b/pages/interests_outdoors.html
@@ -2,16 +2,16 @@ to stay active we like
 <div class="outdoors-about groupings">
     <div class="interest-buttons">
         <div class="outdoor groupings">
-            <button type="button" class="btn btn-default" aria-label="Left Align">bicycling</button>
-            <button type="button" class="btn btn-default" aria-label="Left Align">bowling</button>
-            <button type="button" class="btn btn-default" aria-label="Left Align">golfing</button>
-            <button type="button" class="btn btn-default" aria-label="Left Align">hiking</button>
-            <button type="button" class="btn btn-default" aria-label="Left Align">horseback-riding</button>
-            <button type="button" class="btn btn-default" aria-label="Left Align">kayaking/paddleboarding</button>
-            <button type="button" class="btn btn-default" aria-label="Left Align">motorcycling</button>
-            <button type="button" class="btn btn-default" aria-label="Left Align">racquetball</button>
-            <button type="button" class="btn btn-default" aria-label="Left Align">tennis</button>
-            <button type="button" class="btn btn-default" aria-label="Left Align">walking</button>
+            <button type="button" class="btn btn-default interest-btn-active" aria-label="Left Align">bicycling</button>
+            <button type="button" class="btn btn-default interest-btn-active" aria-label="Left Align">bowling</button>
+            <button type="button" class="btn btn-default interest-btn-active" aria-label="Left Align">golfing</button>
+            <button type="button" class="btn btn-default interest-btn-active" aria-label="Left Align">hiking</button>
+            <button type="button" class="btn btn-default interest-btn-active" aria-label="Left Align">horseback-riding</button>
+            <button type="button" class="btn btn-default interest-btn-active" aria-label="Left Align">kayaking/paddleboarding</button>
+            <button type="button" class="btn btn-default interest-btn-active" aria-label="Left Align">motorcycling</button>
+            <button type="button" class="btn btn-default interest-btn-active" aria-label="Left Align">racquetball</button>
+            <button type="button" class="btn btn-default interest-btn-active" aria-label="Left Align">tennis</button>
+            <button type="button" class="btn btn-default interest-btn-active" aria-label="Left Align">walking</button>
         </div>
     </div>
 </div>
