--- a/pages/interests_travel.html
+++ b/pages/interests_travel.html
@@ -2,10 +2,10 @@ when traveling we like
 <div class="outdoors-about groupings">
     <div class="interest-buttons">
         <div class="at-home groupings">
-            <button type="button" class="btn btn-default" aria-label="Left Align">camping</button>
-            <button type="button" class="btn btn-default" aria-label="Left Align">domestic travel</button>
-            <button type="button" class="btn btn-default" aria-label="Left Align">RV-ing</button>
-            <button type="button" class="btn btn-default" aria-label="Left Align">traveling abroad</button>
+            <button type="button" class="btn btn-default interest-btn-travel" aria-label="Left Align">camping</button>
+            <button type="button" class="btn btn-default interest-btn-travel" aria-label="Left Align">domestic travel</button>
+            <button type="button" class="btn btn-default interest-btn-travel" aria-label="Left Align">RV-ing</button>
+            <button type="button" class="btn btn-default interest-btn-travel" aria-label="Left Align">traveling abroad</button>
         </div>
     </div>
 </div>
