--- a/pages/location.html
+++ b/pages/location.html
@@ -2,20 +2,15 @@
 <body>
 <h1>we're looking for couples within ____ miles of us </h1>
 
-<input type="range" min="0" max="50" value="25" />
+<div class="distance-btns">
+    <button type="button" class="btn btn-default distance-btn" aria-label="Left Align">5</button>
+    <button type="button" class="btn btn-default distance-btn" aria-label="Left Align">10</button>
+    <button type="button" class="btn btn-default distance-btn" aria-label="Left Align">20</button>
+    <button type="button" class="btn btn-default distance-btn" aria-label="Left Align">30</button>
+    <button type="button" class="btn btn-default distance-btn" aria-label="Left Align">40</button>
+    <button type="button" class="btn btn-default distance-btn" aria-label="Left Align">50</button>
 
-
-<!--<button type="button" class="btn btn-default chevronButton" aria-label="Left Align">5-->
-<!--</button>-->
-
-<!--<button type="button" class="btn btn-default chevronButton" aria-label="Left Align">10-->
-<!--</button>-->
-
-<!--<button type="button" class="btn btn-default chevronButton" aria-label="Left Align">15-->
-<!--</button>-->
-
-<!--<button type="button" class="btn btn-default chevronButton" aria-label="Left Align">20-->
-<!--</button>-->
+</div>
 
 <div class="previous-next pull-right">
     <a href="#/user_location">
