--- a/pages/user_age_range.html
+++ b/pages/user_age_range.html
@@ -5,11 +5,6 @@
      Also, this function should store the value to pass on.-->
 
 
-    <!--<div data-role="page">-->
-        <!--<div data-role="header">-->
-            <!--<h1>Range Slider</h1>-->
-        <!--</div>-->
-
         <div data-role="main" class="ui-content">
             <form method="post" action="demoform.asp">
                 <div data-role="rangeslider">
@@ -28,11 +23,11 @@
 
 
     <!--Later on, maybe store text and values in an array or object and make a loop to create the buttons-->
-    <button type="button" class="btn btn-default" aria-label="Left Align">18-25</button>
-    <button type="button" class="btn btn-default" aria-label="Left Align">26-35</button>
-    <button type="button" class="btn btn-default" aria-label="Left Align">36-50</button>
-    <button type="button" class="btn btn-default" aria-label="Left Align">51-60</button>
-    <button type="button" class="btn btn-default" aria-label="Left Align">60+</button>
+    <button type="button" class="btn btn-default age-user-btn" aria-label="Left Align">18-25</button>
+    <button type="button" class="btn btn-default age-user-btn" aria-label="Left Align">26-35</button>
+    <button type="button" class="btn btn-default age-user-btn" aria-label="Left Align">36-50</button>
+    <button type="button" class="btn btn-default age-user-btn" aria-label="Left Align">51-60</button>
+    <button type="button" class="btn btn-default age-user-btn" aria-label="Left Align">60+</button>
 </div>
 <div class="previous-next pull-right">
     <a href="#/location">
