--- a/pages/age_range.html
+++ b/pages/age_range.html
@@ -3,24 +3,13 @@
 
     <div class="age-range-buttons">
         <p>{{match_age}}</p>
-        <button type="button" class="btn btn-default" aria-label="Left Align">18-25</button>
-        <button type="button" class="btn btn-default" aria-label="Left Align">26-35</button>
-        <button type="button" class="btn btn-default" aria-label="Left Align">36-50</button>
-        <button type="button" class="btn btn-default" aria-label="Left Align">51-60</button>
-        <button type="button" class="btn btn-default" aria-label="Left Align">60+</button>
+        <button type="button" class="btn btn-default age-btn" aria-label="Left Align">18-25</button>
+        <button type="button" class="btn btn-default age-btn" aria-label="Left Align">26-35</button>
+        <button type="button" class="btn btn-default age-btn" aria-label="Left Align">36-50</button>
+        <button type="button" class="btn btn-default age-btn" aria-label="Left Align">51-60</button>
+        <button type="button" class="btn btn-default age-btn" aria-label="Left Align">60+</button>
     </div>
 
-    <h1>Text here: {{ arc.test }}</h1>
-
-    <article>
-        <h2>Range slider</h2>
-        Min Value:
-        <input type="number" ng-model="arc.minRangeSlider.minValue" />
-        <br/>Max Value:
-        <input type="number" ng-model="arc.minRangeSlider.maxValue" />
-        <br/>
-        <rzslider rz-slider-model="arc.minRangeSlider.minValue" rz-slider-high="arc.minRangeSlider.maxValue" rz-slider-options="arc.minRangeSlider.options"></rzslider>
-    </article>
 
     <div class="previous-next pull-right">
         <a href="#/user_age_range">
