--- a/pages/interests_out.html
+++ b/pages/interests_out.html
@@ -2,19 +2,19 @@ on a night out we like
 <div class="out-about groupings">
     <div class="interest-buttons">
         <div class="out groupings">
-            <button type="button" class="btn btn-default" aria-label="Left Align">art shows and gallleries</button>
-            <button type="button" class="btn btn-default" aria-label="Left Align">casual dining</button>
-            <button type="button" class="btn btn-default" aria-label="Left Align">comedy shows</button>
-            <button type="button" class="btn btn-default" aria-label="Left Align">concerts (classical)</button>
-            <button type="button" class="btn btn-default" aria-label="Left Align">concerts (popular - jazz, rock, country)</button>
-            <button type="button" class="btn btn-default" aria-label="Left Align">dancing (ballroom)</button>
-            <button type="button" class="btn btn-default" aria-label="Left Align">dancing (country)</button>
-            <button type="button" class="btn btn-default" aria-label="Left Align">dancing (salsa)</button>
-            <button type="button" class="btn btn-default" aria-label="Left Align">fine dining</button>
-            <button type="button" class="btn btn-default" aria-label="Left Align">karaoke</button>
-            <button type="button" class="btn btn-default" aria-label="Left Align">live theater shows</button>
-            <button type="button" class="btn btn-default" aria-label="Left Align">movies</button>
-            <button type="button" class="btn btn-default" aria-label="Left Align">wine tasting</button>
+            <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align">art shows and gallleries</button>
+            <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align">casual dining</button>
+            <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align">comedy shows</button>
+            <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align">concerts (classical)</button>
+            <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align">concerts (popular - jazz, rock, country)</button>
+            <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align">dancing (ballroom)</button>
+            <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align">dancing (country)</button>
+            <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align">dancing (salsa)</button>
+            <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align">fine dining</button>
+            <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align">karaoke</button>
+            <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align">live theater shows</button>
+            <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align">movies</button>
+            <button type="button" class="btn btn-default interest-btn-out" aria-label="Left Align">wine tasting</button>
 
 
         </div>
