--- a/pages/interests_home.html
+++ b/pages/interests_home.html
@@ -3,22 +3,23 @@
 <div class="interest-checkboxes">
     <div class="at-home groupings">
         <button type="button" class="btn btn-default" aria-label="Left Align"
-                ng-click="IHC.toggleInterest('book-club');"
-                ng-class="{selectedButton: IHC.checkInterest('book-club')}">book
+                ng-click="ihc.toggleInterest('book-club');"
+                ng-class="{selectedButton: ihc.checkInterest('book-club')}">book
             club</button>
-        <button type="button" class="btn btn-default" aria-label="Left Align" ng-click="IHC.toggleInterest('conversation');"
-                ng-class="{selectedButton: IHC.checkInterest('conversation')}">conversation (e.g. around the fire
+        <button type="button" class="btn btn-default" aria-label="Left Align"
+                ng-click="ihc.toggleInterest('conversation');"
+                ng-class="{selectedButton: ihc.checkInterest('conversation')}">conversation (e.g. around the fire
             pit)</button>
-        <button type="button" class="btn btn-default" aria-label="Left Align" ng-click="IHC.toggleInterest('cooking');"
-                ng-class="{selectedButton: IHC.checkInterest('book-club')}">cooking</button>
-        <button type="button" class="btn btn-default" aria-label="Left Align" ng-click="IHC.toggleInterest('crafts');"
-                ng-class="{selectedButton: IHC.checkInterest('crafts')}">crafts</button>
-        <button type="button" class="btn btn-default" aria-label="Left Align" ng-click="IHC.toggleInterest('movie night');"
-                ng-class="{selectedButton: IHC.checkInterest('movie night')}">movie night</button>
-        <button type="button" class="btn btn-default" aria-label="Left Align" ng-click="IHC.toggleInterest('playing board games');"
+        <button type="button" class="btn btn-default" aria-label="Left Align" ng-click="ihc.toggleInterest('cooking');"
+                ng-class="{selectedButton: ihc.checkInterest('book-club')}">cooking</button>
+        <button type="button" class="btn btn-default" aria-label="Left Align" ng-click="ihc.toggleInterest('crafts');"
+                ng-class="{selectedButton: ihc.checkInterest('crafts')}">crafts</button>
+        <button type="button" class="btn btn-default" aria-label="Left Align" ng-click="ihc.toggleInterest('movie night');"
+                ng-class="{selectedButton: ihc.checkInterest('movie night')}">movie night</button>
+        <button type="button" class="btn btn-default" aria-label="Left Align" ng-click="ihc.toggleInterest('playing board games');"
                 ng-class="{selectedButton: IHC.checkInterest('playing board games')}">playing board games</button>
-        <button type="button" class="btn btn-default" aria-label="Left Align" ng-click="IHC.toggleInterest('playing card games');"
-                ng-class="{selectedButton: IHC.checkInterest('playing card games')}">playing card games</button>
+        <button type="button" class="btn btn-default" aria-label="Left Align" ng-click="ihc.toggleInterest('playing card games');"
+                ng-class="{selectedButton: ihc.checkInterest('playing card games')}">playing card games</button>
     </div>
 </div>
 
