--- a/pages/user_location.html
+++ b/pages/user_location.html
@@ -1,6 +1,7 @@
+
 <div class="location">
+    where are you?
     <div class="match-locale">
-        <p>{{match_location}}</p>
         <input type="number" placeholder="zip code" class="input_text">
         <button type="button" class="btn btn-default btn-block current-location">use my current location</button>
 
