changed the case of what the in home controller is referred too

--- a/pages/interests_home.html
+++ b/pages/interests_home.html
@@ -3,22 +3,22 @@
 <div class="interest-checkboxes">
     <div class="at-home groupings">
         <button type="button" class="btn btn-default interest-btn-home" aria-label="Left Align"
-                ng-click="IHC.toggleInterest('book-club');"
-                ng-class="{selectedButton: IHC.checkInterest('book-club')}">book
+                ng-click="ihc.toggleInterest('book-club');"
+                ng-class="{selectedButton: ihc.checkInterest('book-club')}">book
             club</button>
-        <button type="button" class="btn btn-default interest-btn-home" aria-label="Left Align" ng-click="IHC.toggleInterest('conversation');"
-                ng-class="{selectedButton: IHC.checkInterest('conversation')}">conversation (e.g. around the fire 
+        <button type="button" class="btn btn-default interest-btn-home" aria-label="Left Align" ng-click="ihc.toggleInterest('conversation');"
+                ng-class="{selectedButton: ihc.checkInterest('conversation')}">conversation (e.g. around the fire
             pit)</button>
-        <button type="button" class="btn btn-default interest-btn-home" aria-label="Left Align" ng-click="IHC.toggleInterest('cooking');"
-                ng-class="{selectedButton: IHC.checkInterest('cooking')}">cooking</button>
-        <button type="button" class="btn btn-default interest-btn-home" aria-label="Left Align" ng-click="IHC.toggleInterest('crafts');"
-                ng-class="{selectedButton: IHC.checkInterest('crafts')}">crafts</button>
-        <button type="button" class="btn btn-default interest-btn-home" aria-label="Left Align" ng-click="IHC.toggleInterest('movie-night');"
-                ng-class="{selectedButton: IHC.checkInterest('movie-night')}">movie night</button>
-        <button type="button" class="btn btn-default interest-btn-home" aria-label="Left Align" ng-click="IHC.toggleInterest('board-games');"
-                ng-class="{selectedButton: IHC.checkInterest('board-games')}">playing board games</button>
-        <button type="button" class="btn btn-default interest-btn-home" aria-label="Left Align" ng-click="IHC.toggleInterest('card-games');"
-                ng-class="{selectedButton: IHC.checkInterest('card-games')}">playing card games</button>
+        <button type="button" class="btn btn-default interest-btn-home" aria-label="Left Align" ng-click="ihc.toggleInterest('cooking');"
+                ng-class="{selectedButton: ihc.checkInterest('cooking')}">cooking</button>
+        <button type="button" class="btn btn-default interest-btn-home" aria-label="Left Align" ng-click="ihc.toggleInterest('crafts');"
+                ng-class="{selectedButton: ihc.checkInterest('crafts')}">crafts</button>
+        <button type="button" class="btn btn-default interest-btn-home" aria-label="Left Align" ng-click="ihc.toggleInterest('movie-night');"
+                ng-class="{selectedButton: ihc.checkInterest('movie-night')}">movie night</button>
+        <button type="button" class="btn btn-default interest-btn-home" aria-label="Left Align" ng-click="ihc.toggleInterest('board-games');"
+                ng-class="{selectedButton: ihc.checkInterest('board-games')}">playing board games</button>
+        <button type="button" class="btn btn-default interest-btn-home" aria-label="Left Align" ng-click="ihc.toggleInterest('card-games');"
+                ng-class="{selectedButton: ihc.checkInterest('card-games')}">playing card games</button>
     </div>
 </div>
 
