--- a/proto_profile_page.html
+++ b/proto_profile_page.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>DoubleDate Proto User Page</title>
+    <link rel="stylesheet" type="text/css" href="dropzone_4.3.0_dist/dropzone.css">
+
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script data-require="angularjs@1.3.6" data-semver="1.3.6" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.6/angular.js"></script>
+    <script src="dropzone_4.3.0_dist/dropzone.js"></script>
     <script src="proto_profile_script.js"></script>
     <script src="profile_service.js"></script>
     <script src="proto_profile_controller.js"></script>
@@ -14,6 +17,10 @@
         }
         td {
             border: 1px solid gray;
+        }
+        #profile-picture {
+            height: 150px;
+            width: auto;
         }
     </style>
 </head>
@@ -60,8 +67,20 @@
             <td>{{pc.currentProfile.profileId}}</td>
         </tr>
         <tr>
+            <td id="picture-dropzone-div" class="dropzone">
+                <!--
+                <form action="profile/upload.php"
+                      class="dropzone"
+                      id="picture-dropzone"></form>
+                -->
+            </td>
+            <td>
+                <img src="{{pc.currentProfile.pictureLink}}" id="profile-picture">
+            </td>
+        </tr>
+        <tr>
             <td>Picture Link:</td>
-            <td><input type="text" ng-model="pc.currentProfile.pictureLink"></td>
+            <td>{{pc.currentProfile.pictureLink}}</td>
         </tr>
         <tr>
             <td>Paragraph:</td>
