Added upload login check, image resizing, random naming.

--- a/proto_profile_page.html
+++ b/proto_profile_page.html
@@ -48,6 +48,7 @@
     <p>Add Results: <span>{{pc.addResults}}</span></p>
     <p>Get Results: <span>{{pc.getResults}}</span></p>
     <p>Update Results: <span>{{pc.updateResults}}</span></p>
+    <p>Upload Results: <span>{{pc.uploadResults}}</span></p>
     <hr>
     <h3>Current Profile:</h3>
     <table>
