add logic to pass data to profileService

--- a/pages/user_age_range.html
+++ b/pages/user_age_range.html
@@ -2,10 +2,11 @@
     <p>we are <span class="user-age">{{uac.userAge}}</span> years old. </p>
     <!--Add an ng-click attr that calls a function which
      captures the value and displays the text to the user.
+
      Also, this function should store the value to pass on.-->
 
-
     <!--Later on, maybe store text and values in an array or object and make a loop to create the buttons-->
+
     <button type="button" class="btn btn-default age-user-btn" aria-label="Left Align" ng-click="uac.userAge='18-25'">18-25</button>
     <button type="button" class="btn btn-default age-user-btn" aria-label="Left Align" ng-click="uac.userAge='26-35'">26-35</button>
     <button type="button" class="btn btn-default age-user-btn" aria-label="Left Align" ng-click="uac.userAge='36-50'">36-50</button>
@@ -13,7 +14,7 @@
     <button type="button" class="btn btn-default age-user-btn" aria-label="Left Align" ng-click="uac.userAge='60+'">60+</button>
 </div>
 <div class="previous-next pull-right">
-    <a href="#/location">
+    <a href="#/distance">
         <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         </button>
