--- a/pages/user_location.html
+++ b/pages/user_location.html
@@ -11,7 +11,7 @@
                 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
             </button>
         </a>
-        <!-- <a href="#/locati3on"> -->
+        <!-- <a href="#/location"> -->
             <button type="button" class="btn btn-default chevronButton" aria-label="Left Align" ng-click="ulc.setUserLocation(ulc.userInputZip)">
                 <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
             </button>
