--- a/pages/distance.html
+++ b/pages/distance.html
@@ -3,12 +3,12 @@
 <h1>we're looking for couples within <span class="miles">{{dc.userMaxDistance}}</span> miles of us </h1>
 <!--  -->
 <div class="distance-btns">
-    <button type="button" class="btn btn-default distance-btn" aria-label="Left Align" ng-click="dc.userMaxDistance=5; lc.getLocation(5)" ng-class="{buttonHighlighted: dc.userMaxDistance==5}">5</button>
-    <button type="button" class="btn btn-default distance-btn" aria-label="Left Align" ng-click="dc.userMaxDistance=10; lc.getLocation(10)" ng-class="{buttonHighlighted: dc.userMaxDistance==10}">10</button>
-    <button type="button" class="btn btn-default distance-btn" aria-label="Left Align" ng-click="dc.userMaxDistance=20; lc.getLocation(20)" ng-class="{buttonHighlighted: dc.userMaxDistance==20}">20</button>
-    <button type="button" class="btn btn-default distance-btn" aria-label="Left Align" ng-click="dc.userMaxDistance=30; lc.getLocation(30)"ng-class="{buttonHighlighted: dc.userMaxDistance==30}">30</button>
-    <button type="button" class="btn btn-default distance-btn" aria-label="Left Align" ng-click="dc.userMaxDistance=40; lc.getLocation(40)"ng-class="{buttonHighlighted: dc.userMaxDistance==40}">40</button>
-    <button type="button" class="btn btn-default distance-btn" aria-label="Left Align" ng-click="dc.userMaxDistance=50; lc.getLocation(50)"ng-class="{buttonHighlighted: dc.userMaxDistance==50}">50</button>
+    <button type="button" class="btn btn-default distance-btn" aria-label="Left Align" ng-click="dc.userMaxDistance=5" ng-class="{buttonHighlighted: dc.userMaxDistance==5}">5</button>
+    <button type="button" class="btn btn-default distance-btn" aria-label="Left Align" ng-click="dc.userMaxDistance=10" ng-class="{buttonHighlighted: dc.userMaxDistance==10}">10</button>
+    <button type="button" class="btn btn-default distance-btn" aria-label="Left Align" ng-click="dc.userMaxDistance=20" ng-class="{buttonHighlighted: dc.userMaxDistance==20}">20</button>
+    <button type="button" class="btn btn-default distance-btn" aria-label="Left Align" ng-click="dc.userMaxDistance=30" ng-class="{buttonHighlighted: dc.userMaxDistance==30}">30</button>
+    <button type="button" class="btn btn-default distance-btn" aria-label="Left Align" ng-click="dc.userMaxDistance=40" ng-class="{buttonHighlighted: dc.userMaxDistance==40}">40</button>
+    <button type="button" class="btn btn-default distance-btn" aria-label="Left Align" ng-click="dc.userMaxDistance=50" ng-class="{buttonHighlighted: dc.userMaxDistance==50}">50</button>
 
 </div>
 
