--- a/pages/user_age_range.html
+++ b/pages/user_age_range.html
@@ -1,5 +1,5 @@
 <div class="age-range-buttons">
-    <p>we are <span class="user-age">{{uac.userAge}}</span> years old. </p>
+    <p>we are <span class="user-age">{{ uac.ourAgeRange() }}</span> years old. </p>
     <!--Add an ng-click attr that calls a function which
      captures the value and displays the text to the user.
 
@@ -7,11 +7,11 @@
 
     <!--Later on, maybe store text and values in an array or object and make a loop to create the buttons-->
 
-    <button type="button" class="btn btn-default age-user-btn" aria-label="Left Align" ng-click="uac.userAge='18-25'">18-25</button>
-    <button type="button" class="btn btn-default age-user-btn" aria-label="Left Align" ng-click="uac.userAge='26-35'">26-35</button>
-    <button type="button" class="btn btn-default age-user-btn" aria-label="Left Align" ng-click="uac.userAge='36-50'">36-50</button>
-    <button type="button" class="btn btn-default age-user-btn" aria-label="Left Align" ng-click="uac.userAge='51-60'">51-60</button>
-    <button type="button" class="btn btn-default age-user-btn" aria-label="Left Align" ng-click="uac.userAge='60+'">60+</button>
+    <button type="button" class="btn btn-default age-user-btn" aria-label="Left Align" ng-click="uac.ourAgeMin = '18'; uac.ourAgeMax = '25'" ng-class="{buttonHighlighted: uac.ourAgeMin == '18'}">18-25</button>
+    <button type="button" class="btn btn-default age-user-btn" aria-label="Left Align" ng-click="uac.ourAgeMin = '26'; uac.ourAgeMax = '35'" ng-class="{buttonHighlighted: uac.ourAgeMin == '26'}">26-35</button>
+    <button type="button" class="btn btn-default age-user-btn" aria-label="Left Align" ng-click="uac.ourAgeMin = '36'; uac.ourAgeMax = '50'" ng-class="{buttonHighlighted: uac.ourAgeMin == '36'}">36-50</button>
+    <button type="button" class="btn btn-default age-user-btn" aria-label="Left Align" ng-click="uac.ourAgeMin = '51'; uac.ourAgeMax = '60'" ng-class="{buttonHighlighted: uac.ourAgeMin == '51'}">51-60</button>
+    <button type="button" class="btn btn-default age-user-btn" aria-label="Left Align" ng-click="uac.ourAgeMin = '61'; uac.ourAgeMax = '100'" ng-class="{buttonHighlighted: uac.ourAgeMin == '61'}">61+</button>
 </div>
 <div class="previous-next pull-right">
     <a href="#/distance">
@@ -19,10 +19,10 @@
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         </button>
     </a>
-    <a href="#/age_range">
-        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">
+    <!-- <a href="#/age_range"> -->
+        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align" ng-click = 'uac.setOurAge()'>
             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        </button>
+        <!-- </button> -->
     </a>
 </div>
 </div>
