--- a/pages/interests_home.html
+++ b/pages/interests_home.html
@@ -24,7 +24,7 @@
 
 
 <div class="previous-next pull-right">
-    <a href="#/age_range">
+    <a href="#/their_age_range">
         <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         </button>
